# bevy_rhai

./: Cargo.toml
assets/scripts/: run.rhai
src/: main.rs
